<resources>
    <string name="app_name">My TodoList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="mn_home">Home</string>
    <string name="mn_todo">Todo</string>
    <string name="mn_done">Done</string>
    <string name="mn_feedback">Feedback</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_title">Give Your Feedback</string>
    <string name="hint_enter_feedback">Enter feedback</string>
    <string name="kategori">Kategori</string>
    <string name="mn_progres">Progress</string>
    <string name="newtodo">New Todo</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edittodo">Edit Todo</string>
    <string name="nama_kosong">Please fill the name</string>
    <string name="desc_kosong">Please fill the description</string>
    <string name="option">Option</string>
    <string-array name="itemkategori">
        <item>Todo</item>
        <item>Progress</item>
        <item>Done</item>
    </string-array>
</resources>
